<resources>
    <string name="app_name">OMNIFood</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="eat_homemade_anywhere">Eat Homemade Anywhere !</string>
    <string name="sigin_with_email">SigIn with Email</string>
    <string name="signin_with_phone">SignIn with Phone</string>
    <string name="or">OR</string>
    <string name="signup">Signup</string>
    <string name="todo">TODO</string>
    <string name="find_homemade_food_around_you_or_offer_your_own">Find homemade food around you or offer your own !</string>
    <string name="connect_as_chef">Connect As Chef</string>
    <string name="connect_as_customer">Connect As Customer</string>
    <string name="connect_as_delivery_person">Connect As Delivery Person</string>

    <string-array name="State">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>


    <string-array name="shipper">
        <item>Shipper 1</item>
        <item>Shipper 2</item>
    </string-array>

    <string-array name="DishName">
        <item>Thepla</item>
        <item>Dal Rice</item>
        <item>Dhokla</item>
        <item>Sabji Roti</item>
        <item>Kadhi Khichdi</item>
        <item>Puri bhaji</item>
        <item>Dal Dhokdi</item>
        <item>Undhiyu</item>
        <item>Aloo Paratha</item>
        <item>Patra</item>
        <item>Khandvi</item>
        <item>Gulab Jamun</item>
        <item>SevTomato bhakri</item>
        <item>Shrikhand</item>
        <item>Palak Paneer</item>
        <item>Khulcha</item>
        <item>Makki di roti</item>
        <item>Gobi Partha</item>
        <item>Biryani</item>
        <item>Rajma</item>
        <item>Bhindi Fry</item>
        <item>Dum Biryani</item>
        <item>Rumali roti</item>
        <item>Dal Makhni</item>
        <item>Samosa</item>
        <item>Kachori</item>
        <item>Menduwada</item>
        <item>Pulav</item>
        <item>Pav Bhaji</item>
        <item>Misal Pav</item>
        <item>Mix Vegetable</item>
        <item>Muffins</item>
        <item>DalFry JerraRice</item>
        <item>Bengali sweet</item>
        <item>Puranpoli</item>
        <item>Egg Curry</item>
        <item>Pomfret Fish</item>
        <item>Egg Bhurji</item>
        <item>Dum chicken</item>
        <item>Hyderabadi Chicken Biryni</item>
    </string-array>
</resources>