<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/back2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img1"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="275dp"
        android:layout_height="500dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/title_img_white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:padding="20dp"
            android:text="@string/eat_homemade_anywhere"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/SignwithEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:background="@drawable/btnred"
            android:drawableStart="@drawable/whitemail"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:text="@string/sigin_with_email"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/SignwithPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btnblueish"
            android:drawableStart="@drawable/phonewhite"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="@string/signin_with_phone"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TableRow
                android:id="@+id/hr"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#474646">

            </TableRow>

            <TextView
                android:id="@+id/OR"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="17sp" />

            <TableRow
                android:id="@+id/dr"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#474646" />

        </LinearLayout>

        <Button
            android:id="@+id/Signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_shape"
            android:text="@string/signup"
            android:textColor="@color/Black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>